# knowledge-infused-multimodal-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py
backend/api/: __init__.py  app.py  dependencies.py  exception_handlers.py  middleware.py
backend/chunking/: __init__.py  exceptions.py
backend/config/: __init__.py  settings.py
backend/domain/: __init__.py  base.py  chunk.py  identifiers.py  paper.py  qa.py  reference.py  relationship.py  structure.py  value_objects.py  visuals.py
backend/embeddings/: __init__.py  exceptions.py
backend/evaluation/: exceptions.py
backend/generation/: exceptions.py
backend/graph/: exceptions.py
backend/ingestion/: __init__.py  exceptions.py  identifiers.py  models.py  service.py  validation.py
backend/parser/: __init__.py  exceptions.py
backend/retrieval/: exceptions.py
backend/search/: __init__.py  collection_naming.py  exceptions.py
backend/shared/: __init__.py  logging.py
backend/storage/: __init__.py  exceptions.py  interfaces.py  local_filesystem.py
docs/: ARCHITECTURE.md  SYSTEM_DESIGN.md
frontend/: .prettierignore  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/constants/: layout.ts  motion.ts  typography.ts
frontend/hooks/: use-ask-question.ts  use-online-status.ts  use-upload-document.ts
frontend/lib/: config.ts  http.ts  pdf-storage.ts
frontend/providers/: accessibility-provider.tsx  app-providers.tsx  (+3 more)
tests/: test_health.py
(+845 files in other folders)
