[project]
name = "knowledge-infused-multimodal-rag"
version = "0.1.0"
description = "Knowledge-Infused Multimodal Question Answering System for Scientific Research Papers"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "python-multipart>=0.0.12,<1.0",
    "docling>=2.100,<3.0",
    "sentence-transformers>=3.0,<6.0",
    "huggingface-hub>=0.24,<2.0",
    "qdrant-client>=1.10,<2.0",
    "neo4j>=5.24,<7.0",
    "ollama>=0.4,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
]

[project.scripts]
kimrag-api = "backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
# B008: FastAPI's Depends()/File()/... in argument defaults is the required
# dependency-injection idiom, not the mutable-default-argument bug this rule
# targets.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
